--- a/pyproject.toml
+++ b/pyproject.toml
@@ -223,7 +223,9 @@ unfixable = [
 # S101 Use of `assert` detected
 # TID252 Relative imports from parent modules are banned
 # PLR2004 Magic value used in comparison
-"tests/*" = ["B011", "F841", "S101", "TID252", "PLR2004"]
+"tests/*" = ["B011", "F841", "S", "TID252", "PLR2004"]
+"tests/*/*.ipynb" = ["EM", "B018", "E402", "F405", "SIM", "F403", "F821", "RUF100", "ICN001"]
+"docs/*/*.ipynb" = ["S310", "EM", "B018", "E402", "F405", "SIM", "F811", "N816","E741"]
 # F401 'foo' imported but unused
 # F403 'x' used; unable to detect undefined names
 "nbconvert/*/__init__.py" = ["F401", "F403"]
