--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,13 +23,14 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-20.04", "macos-latest", "windows-latest"]
-        python-version: ["3.8", "3.11"]
+        python-version: ["3.8", "3.12"]
         include:
           - os: "windows-latest"
             python-version: "3.9"
-          - os: "ubuntu-20.04"
+          - os: "macos-latest"
             python-version: "3.10"
           - os: "ubuntu-20.04"
+            python-version: "3.11"
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -56,15 +57,6 @@ jobs:
           hatch run cov:nowarn
 
       - uses: jupyterlab/maintainer-tools/.github/actions/upload-coverage@v1
-
-  python312:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-        with:
-          python_version: "3.12"
-      - run: hatch run test:test
 
   coverage:
     runs-on: ubuntu-latest
